--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,11 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
+      working-directory: ./AzPlayground
       run: dotnet restore
     - name: Build
+      working-directory: ./AzPlayground
       run: dotnet build --no-restore
     - name: Test
+      working-directory: ./AzPlayground
       run: dotnet test --no-build --verbosity normal
