--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,19 @@ riderModule.iml
 # Rider
 .idea/*
 AzPlayground/.idea/
+
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
